--- a/src/components/UserAddForm.css
+++ b/src/components/UserAddForm.css
@@ -1,10 +1,12 @@
-h2 {
+#addUsers {
     font-style: italic;
 }
 
 .user-add-form {
     display: flex;
     flex-direction: column;
+    width: 50%;
+    margin: auto;
 }
 
 .user-add-form input {
